# PON

./: .gdb_history  .gitignore  .lab3b.c.swp  lab3a.c  lab3b  lab3b.c  lab3b.id0  lab3b.id1  py.py
cpp1/: .lab1test.cpp.swp  lab1  lab1.cpp  lab1.h  lab1test.cpp
cpp2/: CMakeLists.txt  DescFolium.cpp  DescFolium.h  main.cpp
cpp3/: CMakeLists.txt  main.cpp  test.cpp
cpp3/lib/: CMakeLists.txt  Queue.cpp  Queue.h
cpp4/: CMakeLists.txt  main.cpp
cpp4/lib/: CMakeLists.txt  flat.cpp  flat.h  house.cpp  house.h  resident.cpp  resident.h
task1/: task  task1.c
task2/: task2  task2.c
task3/: .gdb_history  .lab3b.c.swp  lab3  lab3.c  lab3a  lab3b  lab3b.c  lab3b.id2
task4/: ._taskb4.c.swp  .gdb_history  _btask4.c  _task4.c  _taskb4.c  btask4  pon.txt  task4
task5/: _task5.c
task6/: _task6.c
task7/: pon.c
